--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.36" targetFramework="net40" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net40" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net40" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net40" />
@@ -30,7 +31,9 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="MigSharp" version="2.3.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
+  <package id="NConfigStitch" version="1.0.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
