--- a/InfoDugnad2/config/tools/NConfigStitch.targets
+++ b/InfoDugnad2/config/tools/NConfigStitch.targets
@@ -1,7 +1,7 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Target Name="NConfigStitch">
         <ItemGroup>
-            <NConfigStitchTemplates Include=".\**\NConfigStitch.tt" />
+            <NConfigStitchTemplates Include=".\**\Web.config.tt" />
         </ItemGroup>
          <Exec
             WorkingDirectory="$(MSBuildProjectDirectory)\config\tools"
