--- a/InfoDugnad2/config/output/web.prod.config
+++ b/InfoDugnad2/config/output/web.prod.config
@@ -15,6 +15,7 @@
   </configSections>
   <connectionStrings></connectionStrings>
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
