--- a/InfoDugnad2/web.config
+++ b/InfoDugnad2/web.config
@@ -17,6 +17,7 @@
     <add name="DB" connectionString="Data Source=(local);Initial Catalog=dugnad;user id=dbuser;password=dbpass" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
