--- a/InfoDugnad2/InfoDugnad2.csproj
+++ b/InfoDugnad2/InfoDugnad2.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Migrations\Steps\M_006_Hardness_6.cs" />
     <Compile Include="Migrations\Steps\M_007_Password_7.cs" />
     <Compile Include="Migrations\Steps\M_008_Cleanup_8.cs" />
+    <Compile Include="Migrations\Steps\M_009_Email_9.cs" />
     <Compile Include="Models\Logic.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Request.cs" />
